[tool.poetry]
name = "merrill_depo"
version = "0.0.1"
description = "Data depo"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "merrill_depo"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"